--- a/frontend/docs/css/main.css
+++ b/frontend/docs/css/main.css
@@ -3,8 +3,15 @@
     margin: 0;
     padding: 0;
   }
-  
   #app {
     background-color: white;
     height: 100vh;
+  }
+  footer, .nav__header
+  {
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    background-color: deepskyblue;
   }
