--- a/frontend/docs/css/main.css
+++ b/frontend/docs/css/main.css
@@ -16,34 +16,27 @@ img{
   width: 200px;
   height: 200px;
 }
-  /* ul
-  {
-    display: flex;
-    flex-direction: column;
-  } */
-  /* li
-  {
-    display: flex;
-    justify-content: center;
-    background-color: dimgray;
-    width: 100%;
-    padding: 1rem;
-    margin: 0.5rem;
-    border-radius: 1rem;
-  } */
+
 .objectGrid{
 
   display: grid;
   grid-template-columns: auto auto auto;
+
+  justify-items: center;
   /* grid-gap: 1rem; */
 
 }
 .objectItem {
-  justify-content: center;
+  display: grid;
+  justify-items: center;
+  max-width:  220px;
+  max-block-size: auto;
   background-color: dimgray;
-  padding: .25rem;
-  margin: 0.5rem;
-  border-radius: 1rem;
+  
+  padding: 10px;
+  margin: 2px;
+  border-radius: 2rem;
+
 
 }
 
