--- a/frontend/docs/css/main.css
+++ b/frontend/docs/css/main.css
@@ -12,9 +12,10 @@ body {
   background-image: url("./images/Scooter.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
+
   background-size: 100%;
   background-position: center;
-  color: rgb(24, 23, 23);
+  background-color:  rgb(61, 61, 61);
 }
 
   footer, .nav__header
@@ -23,15 +24,21 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    background-color: deepskyblue;
+    background-color: rgb(0, 106, 141);
+    margin:  0 auto;
+
   }
+
+
+
 img{
   width: 200px;
   height: 200px;
 }
 
 .objectGrid{
-
+  padding-top: 5rem;
+  padding-bottom: 5rem;
   display: grid;
   grid-template-columns: auto auto auto;
 
@@ -44,7 +51,7 @@ img{
   justify-items: center;
   max-width:  220px;
   max-block-size: auto;
-  background-color: dimgray;
+  background-color:  rgba(0, 106, 141, 0.76);
   
   padding: 10px;
   margin: 2px;
@@ -52,6 +59,7 @@ img{
 
 
 }
+
 
   /* h3
   { */
@@ -61,9 +69,14 @@ img{
    */
   .add-album, .add-artist, .add-song
   {
-    background-color: dimgray;
+    max-width:  220px;
+    background-color:  rgba(0, 106, 141, 0.76);
     padding: 1rem;
     margin: 0.5rem;
     border-radius: 1rem;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    
   }
   
